# TradingAgents-Studio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
cli/: main.py  models.py  utils.py
examples/: quickstart.py
tests/: test_analyst_execution.py  test_deepseek_reasoning.py  test_parallel_analysts.py  test_web_api.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py  schemas.py  stock_screener.py
tradingagents/agents/analysts/: capital_flow_analyst.py  cn_sentiment_analyst.py  event_analyst.py  macro_analyst.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/utils/: agent_states.py
tradingagents/backtesting/: __init__.py  engine.py  metrics.py  portfolio.py  slippage.py
tradingagents/backtesting/signals/: __init__.py  base.py  from_memory_log.py
tradingagents/dataflows/: __init__.py  _proxy.py  akshare_stock.py  alpha_vantage_common.py  capital_flow.py  cn_sentiment.py  eastmoney_guba.py  event_intelligence.py  interface.py  macro.py  mediacrawler_wrapper.py  tushare_stock.py
tradingagents/graph/: analyst_execution.py  analyst_runner.py  checkpointer.py  conditional_logic.py  propagation.py  setup.py  trading_graph.py
tradingagents/llm_clients/: anthropic_client.py  azure_client.py  google_client.py  openai_client.py  throttle.py
tradingagents/screener/: __init__.py  factors.py  signals.py  universe.py
tradingagents/utils/: __init__.py  nl_query_parser.py
web/backend/: database.py  executors.py  graph_runner.py  llm_health.py  main.py  models.py  run.py  scheduler.py  screener_runner.py
web/backend/routers/: analyze.py  backtest.py  dashboard.py  history.py  holdings.py  paper.py  quality.py  quote.py  schedule.py  screen.py  settings.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.vue  main.ts  router.ts
web/frontend/src/components/: BacktestDetail.vue  CausalChain.vue  DebateThread.vue  EventReport.vue  KLineChart.vue  ModelPicker.vue
web/frontend/src/i18n/: index.ts
web/frontend/src/pages/: AnalysisProgress.vue  Backtest.vue  Dashboard.vue  History.vue  Holdings.vue  NewAnalysis.vue  Paper.vue  Quality.vue  ReportDetail.vue  Schedule.vue  Screener.vue  (+1 more)
(+5 files in other folders)
